--- a/app/views/encounters/new.html.haml
+++ b/app/views/encounters/new.html.haml
@@ -5,12 +5,12 @@
         .col-6
           %h3
             - if params[:mode] == 'existing_tests'
-              = 'Existing Tests'
+              = I18n.t('encounters.new.existing_test', patient_name: patient_display_name(@patient.name))
             - else
-              = 'New Test'
+              = I18n.t('encounters.new.new_test', patient_name: patient_display_name(@patient.name))
         .col-6.right
           %ul
             %li
               = link_to(I18n.t('views.back'), new_index_encounters_path, class: 'button cancel')
 
-= react_component('EncounterNew', context: @navigation_context.to_hash, patient: @patient_json, mode: params[:mode], possible_assay_results: @possible_assay_results, referer: @return_path_encounter)
+= react_component('EncounterNew', context: @navigation_context.to_hash, patient_id: @patient.id, mode: params[:mode], possible_assay_results: @possible_assay_results, referer: @return_path_encounter)
