--- a/app/views/test_orders/index.haml
+++ b/app/views/test_orders/index.haml
@@ -47,14 +47,8 @@
     - else
       %section.row
         .small-12.columns.box
-          %header
-            = image_tag('img/test-tube.png')
-            %h3
-              = I18n.t('test_orders.index.test_order', count: @total)
-            %span.table-actions
-              = link_to devices_path(test_orders_path(@filter.merge(format: :csv))), title: I18n.t('devices.index.download_csv') do
-                %span.icon-download.icon-gray
-          .box-content
-            = react_component "TestOrdersIndexTable", tests: Presenters::TestOrders.index_view(@tests), orderBy: @order_by
-            .pagination
-              = render 'shared/pagination'
+          = react_component "TestOrdersIndexTable", testOrders: Presenters::TestOrders.index_view(@tests), orderBy: @order_by,
+            imageUrl: image_url('img/test-tube.png'), headerTitle: I18n.t('test_orders.index.test_order', count: @total),
+            csvUrl: test_orders_path, csvTitle: I18n.t('devices.index.download_csv')
+          .pagination
+            = render 'shared/pagination'
