--- a/app/assets/javascripts/components/patient_card.js.jsx.erb
+++ b/app/assets/javascripts/components/patient_card.js.jsx.erb
@@ -9,7 +9,22 @@ var PatientCard = React.createClass({
   render: function () {
     var patient = this.props.patient;
 
-    if (patient == null) {
+    function patientInfo(patient) 
+    {
+      var string = "";
+      if (patient.dob) 
+      {
+        string += patient.dob
+        if( patient.age > 0)
+          string += " (" + patient.age + " y/o)";
+        else // months only
+          string += " (" + patient.age_months + " m/o)";
+      }
+      return string;
+    }
+
+    if (patient == null) 
+    {
       return (
         <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
           c.top do
@@ -21,60 +36,66 @@ var PatientCard = React.createClass({
     else 
     {
       return (
-      <ul>
-        <li>
-          <label>{Patient.human_attribute_name(:name)}</label>
-          {patient_display_name(patient.name)}
-        </li>
-        <li>
-          <label>{Patient.human_attribute_name(:gender)}</label>
-          {patient.gender}
-        </li>
-        <li>
-          <label>{Patient.human_attribute_name(:dob)}</label>
-          {patient_birth_date(patient.dob)}
-        </li>
-        <li>
-          <label>{Patient.human_attribute_name(:phone)}</label>
-          {patient.phone}
-        </li>
-        <li>
-          <label>{Patient.human_attribute_name(:email)}</label>
-          {patient.email}
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <label>{Patient.human_attribute_name(:entity_id)}</label>
-          {patient.entity_id}
-        </li>
-        <li>
-          <label>{ Patient.human_attribute_name(:address)}</label>
-          {patient.address}
-        </li>
-      </ul>
-      <ul>
-        <li>
-          <label>{Patient.human_attribute_name(:created_at)}</label>
-          {I18n.l(patient.created_at, format: :long)}
-        </li>
-      </ul>
+        <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
+          c.top do
+            raw <<-JSX
+              <ul class="column1">
+                <li>
+                  <label>Name</label>
+                  {patient.name || "(Unknown name)"}
+                </li>
+                <li>
+                  <label>Gender</label>
+                  {patient.gender}
+                </li>
+                <li>
+                  <label>Date of Birth</label>
+                  {patientInfo(patient)}
+                </li>
+              </ul>
+              <ul class="column2">
+                <li>
+                  <label>Address</label>
+                  {patient.address}<br/>
+                </li>
+                <li>
+                  <label>Phone</label>
+                  {patient.phone}<br/>
+                </li>
+                <li>
+                  <label>Email</label>
+                  {(function(){
+                    if (patient.email) {
+                      return <a href={"mailto:" + patient.email}>{patient.email}</a>;
+                    }
+                  }.bind(this))()}
+                </li>
+              </ul>
+            JSX
+          end
 
-      {(function(){
-        if (!this.props.canEdit) return;
-        return (
-          <a href={"/patients/" + patient.id + "/edit"} title="Edit">
-            <img src="#{asset_url("ic-pencil.png")}"/>
-          </a>);
-      }.bind(this))()}
-      {(function(){
-        if (!this.props.canAddTest) return;
-        if (this.props.showTestLink != true) return;
-        return (
-          <a href={"/encounters/new?mode=fresh_tests&patient_id=" + patient.id } title="Create Test Order" className="label">
-            Create Test Order
-          </a>);
-      }.bind(this))()}
+          c.actions do
+            raw <<-JSX
+            {(function(){
+              if (!this.props.canEdit) return;
+
+              return (
+                <a href={"/patients/" + patient.id + "/edit"} title="Edit">
+                  <img src="#{asset_url("ic-pencil.png")}"/>
+                </a>);
+            }.bind(this))()}
+
+            {(function(){
+              if (!this.props.canAddTest) return;
+              if (this.props.showTestLink != true) return;
+              return (
+                <a href={"/encounters/new?mode=fresh_tests&patient_id=" + patient.id } title="Create Test Order" className="label">
+                  Create Test Order
+                </a>);
+            }.bind(this))()}
+            JSX
+          end
+        end) %>
       );
     }
   }
