--- a/app/assets/stylesheets/_buttons.scss
+++ b/app/assets/stylesheets/_buttons.scss
@@ -1,4 +1,4 @@
-/* =============================================================================
+/* ===========================================================================
   BUTTONS
 ============================================================================= */
 
@@ -10,11 +10,11 @@
   font-weight: 700;
   text-align: center;
   text-transform: uppercase;
-  line-height: 48px;
+  line-height: 30px;
   border: 1px solid transparent;
   display: inline-block;
   padding: 0 24px;
-  height: 48px;
+  height: 30px;
   margin-bottom: 0;
   vertical-align: middle;
   white-space: nowrap;
@@ -90,17 +90,17 @@
 .btn-add,
 .btn-add-secondary {
   font-family: $sans;
-  border-radius: 50%;
   background: $blue;
-  font-size: 27px;
+  font-size: 12px;
   font-weight: 300 !important;
+  padding:0 24px;
   color: $white;
-  line-height: 48px;
+  line-height: 30px;
   text-align: center;
   display: inline-block;
   vertical-align: middle;
-  height: 48px;
-  width: 48px;
+  height: 30px;
+  width:auto;
 
   &.fixed {
     position: fixed;
