--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -335,7 +335,7 @@ color:#fff !important;
 .testflow .row.labelHeader .col-6 {max-width:50%;}
 .testflow .panel.patient-summary {height:180px;overflow-y:scroll;}
 .testflow .panel.patient-details .row {border-bottom:1px solid #e2e2e2;}
-.testflow .panel.patientHistory .col-12 {display:block;}
+.testflow .panel.patientHistory .col-12 {display:block;max-width:100%;}
 
 .testflow .box {background:white;}
 .testflow .col {margin:0.5% 0.5%;}
@@ -484,13 +484,15 @@ color:#fff !important;
 }
 
 .testflow input[type=submit] {
-  background-color: #555;
+  background-color: #2196f3;
   color: white;
   border: none;
-  vpadding: 1em 2em;
-  font-size: .9em;
+  padding:1px 2em;
+  font-size: 12px;
   text-transform: uppercase;
-  line-height: 1em;
+  line-height: 30px;
+  height:30px;
+  display:inline-block;
 }
 
 /*  BELOW 768 PIXELS */
@@ -575,13 +577,6 @@ color:#fff !important;
 
 /* Content Styles! */
 
-.testflow .panel {
-  background:#fff;
-  max-width:90rem;
-  margin:0 auto;
-  overflow:hidden;
-  width:100%;
-}
 .testflow .panel hr {border:none;}
 .testflow .panel .row {
   margin:1em 0px;
@@ -594,7 +589,7 @@ color:#fff !important;
 }
 
 .testflow form.zebra .panel .row:nth-child(even) > div {
-  padding:1rem 0.5rem;
+  padding:1rem 0rem;
 }
 .testflow .panel .row:last-child {
   margin-bottom:0px;
@@ -613,7 +608,7 @@ color:#fff !important;
   padding: 0.5em 2em;
   font-size: .9em;
   text-transform: uppercase;
-  line-height: 1em;
+  line-height: 30px;
   text-decoration:none;
   margin-left:5px;
 }
@@ -644,7 +639,8 @@ color:#fff !important;
     position: absolute;
     top: 5px;
     right: 14px;
-    padding: 0.75em 1.9em;
+    padding:1px 2em;
+    height:30px;
 }
 .testflow .patient-details .row {
   margin:0px;
@@ -678,7 +674,11 @@ padding:15px;
 
 .testflow .patient-details ul li {
   list-style-type:none;
-  margin:15px 30px;
+  margin:5px 30px;
+  display:flex;
+  align-items:center;
+  font-size:12px;
+  line-height:12px;
 }
 
 .testflow .patient-details .stat {
@@ -754,7 +754,7 @@ padding:15px;
 .testflow .newTestOrder .panel .row {
     align-items: flex-start;
     justify-content: flex-start;
-    padding: 0 5px;
+    padding: 0 15px;
 }
 .zebra select, .zebra select option{
   color:#000;
