--- a/app/views/patients/_patient_episode_summary.haml
+++ b/app/views/patients/_patient_episode_summary.haml
@@ -17,18 +17,10 @@
       %ul
         %li
           = link_to I18n.t('patients.show.add_episode'), new_patient_episode_path(patient), class: 'button add'
-  .panel.patient-details.episodelisting
+  .panel.patient-details.episodelisting.patient-summary
     - episodes.each do |episode|
       .row
-        .col-2.summary.patient
-          .stat
-            .empty-icon.centered
-              %span
-                %i.fa.fa-navicon
-        .col-10
-          %ul
-            %li
-              = link_to I18n.t('patients.show.edit_episode'), edit_patient_episode_path(patient, episode), class: 'button edit'
+        .col-12
           %ul
             %li
               %label
@@ -51,3 +43,6 @@
               %label
                 = Episode.human_attribute_name(:outcome)
               = treatment_outcome_name(episode.outcome)
+          %ul
+            %li
+              = link_to I18n.t('patients.show.edit_episode'), edit_patient_episode_path(patient, episode), class: 'button edit'
