#1905 Add alerts to Roles for institution and site level navigation

--- a/app/policies/owner/institution.json.erb
+++ b/app/policies/owner/institution.json.erb
@@ -22,7 +22,8 @@
         "deviceModel?institution=<%= institution_id %>",
         "device?institution=<%= institution_id %>",
         "testResult?institution=<%= institution_id %>",
-        "encounter?institution=<%= institution_id %>"
+        "encounter?institution=<%= institution_id %>",
+        "alert?institution=<%= institution_id %>"
       ],
       "action": "*",
       "delegable": true
