--- a/app/policies/owner/manufacturer.json.erb
+++ b/app/policies/owner/manufacturer.json.erb
@@ -34,6 +34,13 @@
       "delegable": true
     },
     {
+      "resource": [
+        "alert?institution=<%= institution_id %>"
+      ],
+      "action": "*",
+      "delegable": true
+    },
+    {
       "resource": "role?institution=<%= institution_id %>",
       "action": "*",
       "delegable": true
