Add/amend patient.

--- a/app/assets/stylesheets/_newdash.scss
+++ b/app/assets/stylesheets/_newdash.scss
@@ -46,7 +46,7 @@
 
 .container .box {background:white;margin:0px 10px 0px 10px;}
 .container .col {margin:18px 10px 18px 10px;}
-#contentcontainer .col {margin:0px;max-width:100%;}
+#contentcontainer .col {margin:0px;}
 
 /* BOXES */
 
@@ -110,10 +110,6 @@ body {
   padding: 10px 15px;
   height:40px;
   border:1px solid #c7c7c7;
-
-  h3 {
-    display:inline-block;
-  }
 }
 
 .container h1 {
@@ -217,14 +213,12 @@ body {
 
 @media only screen and (max-width: 480px) {
   .container fieldset {
-    margin-top: 0.5em; 
+    margin-top: 0.5em;
   }
 }
 
 .container label {
-  font-size: 12px;
-  color:#333;
-  font-weight:bold;
+  font-size: 0.8em;
 }
 
 .container input[type=text] {
@@ -289,7 +283,7 @@ body {
 
 #contentcontainer tr:nth-child(even) {
   background-color: #dbdae2;
-} 
+}
 
 #contentcontainer tr:nth-child(even):hover {
   opacity:0.8;
@@ -312,7 +306,7 @@ body {
 .container .col-4 {min-width: 31.26%;flex:1 1 31.26%;}
 .container .col-3 {min-width: 22.8%;flex:1 1 22.8%;}
 .container .col-2{min-width: 14.33%;flex:1 1 14.33%;}
-.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;} 
+.container .col-1 {min-width: 5.866%;flex:1 1 5.866%;}
 
 
 
@@ -486,7 +480,7 @@ padding:3px 80px 3px 5px;
 min-width:100% !important;
 }
 
-/* Dashboard Styles */ 
+/* Dashboard Styles */
 #contentcontainer .row .columns div.search {height:40px;background:#e06023;position:fixed;top:0px;width:100%;left:300px;top:60px;z-index:999;}
 #contentcontainer .dashboard main {margin-top:50px;}
 .dashboard {padding:10px;}
@@ -585,7 +579,7 @@ form#new_device {
   li button {top:0px;left:3px;}
   .selected::before {height:29px;}
   li {font-size:12px;line-height:30px;}
-} 
+}
 
 .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder, .show-navigation-context-picker #context_side_bar ::-webkit-input-placeholder {color:#fff;}
 .show-navigation-context-picker #context_side_bar .search-sites {background:#555 !important;color:#fff !important;}
@@ -647,19 +641,12 @@ form#new_device {
       display:inline-block;
       padding:0.75em 2em;
       min-width:135px;
-      margin:0px;
+      margin-left:13px;
       font-weight:bold;
       font-size:12px!important;
-      height:30px;
-      margin-right:10px;
-      line-height:14px;
+      margin-right:0px;
       background-color:#0d8aee;
       font-weight:bold;
-    }
-  }
-  .row.labelHeader.patientSummaryHeader {
-    li a.button.add {
-      margin-right:28px;
     }
   }
 
@@ -677,10 +664,8 @@ form#new_device {
     label {
       font-size:12px;
       font-weight:bold;
-      color:#333;
-      min-width:80px;
     }
-    .col-12 {position:relative;}
+    .col-10 {position:relative;}
   }
 }
 /* Edit & New Episode Styles */
@@ -735,35 +720,14 @@ form#new_device {
   }
 }
 
-#contentcontainer .episodeDetail {
-  justify-content:flex-start;
-
-  .row {
-    justify-content:flex-start;
-  }
-
-  .right {
-    justify-content:flex-end;
-
-
-    a.button {margin:0px 10px 0px 0px;}
-  }
-  .edit_episode panel row {
-    padding:0 15px;
-  }
-}
-
 /* Edit & New Test Order Styles */
 .testflow.testOrder {
-  padding:0px;
   .container {
     padding:0px;
 
     .row.labelHeader {
       max-width:none;
       margin:0px auto;
-      padding-left:15px!important;
-      background:#e06023;
 
       h3 {
         padding-left:0px;
@@ -835,54 +799,6 @@ form#new_device {
 .newTestOrder {
   .panel {
     max-width:none;
-    p{margin:0px;}
-    label {
-      color:#333;
-      font-weight:bold;
-    }
-    input[type="radio"] + label, .custom-fields-title > input[type="radio"] + .col {
-      font-weight:300;
-    }
-
-    .Select {overflow:visible;}
-  }
-}
-
-/* Test Result Styles */
-#contentsection .row.testResult {
-  .container {
-    width:100%;
-    padding:10px 15px;
-
-    .panel {
-      border:1px solid #e2e2e2;
-
-      .underline span {
-        border:none;
-      }
-
-      .row:nth-child(odd) {
-        background:#dbdae2;
-      }
-
-      .row {
-        padding:5px 15px;
-        .row {
-          padding:0px;
-          background:none;
-        }
-
-        table {
-          padding:0px;
-        }
-      }
-
-      .card {
-        box-shadow:none;
-        border:none;
-        border-bottom:1px solid #e2e2e2;
-      }
-    }
   }
 }
 
@@ -890,22 +806,10 @@ form#new_device {
   font-size:12px!important;
 }
 
-section.newPatientContainer, section.editPatientContainer, .optionsarea {
+section.newPatientContainer {
   padding:10px 20px 10px 15px;
-} 
-.optionsarea {
-  padding:10px 20px 10px 15px;
-
-  header {border:none;}
-  ul.nav-list {
-    display:flex;
-    justify-content:space-around;
-    border:1px solid #e2e2e2;
-    box-shadow:none;
-    height:auto;
-  }
 }
-form#new_patient, form.edit_patient{
+form#new_patient {
   background:#fff;
   border:1px solid #e2e2e2;
   font-size:0.7rem;
@@ -927,7 +831,7 @@ form#new_patient, form.edit_patient{
   .value {
     line-height:40px;
   }
-  
+
   input.input-large {
     border:1px solid #e2e2e2;
     margin-top:5px;
@@ -937,23 +841,20 @@ form#new_patient, form.edit_patient{
   div.row.button-actions {
     position:absolute;
     top:-15px;
-    right:31px;
+    right:25px;
     background:none!important;
     padding:0px;
 
-      input.btn-primary, a.btn-link, a.btn-secondary{
-        margin:0px 0px 0px 10px;padding:0.5em 2em;line-height:15px;height:30px;color:#fff;
+      input.btn-primary, a.btn-link {
+        margin:0px;padding:0.5em 2em;line-height:15px;height:30px;color:#fff;
       }
       input.btn-primary:hover, a.btn-link:hover {opacity:0.8;}
       input.btn-primary {
         background:#9DCE65;
       }
 
-      a.btn-link{
-        background:#e06023;
-      }
-      a.btn-secondary {
-        background:#cc443f
+      a.btn-link {
+        background:#555!important;
       }
   }
 
@@ -983,7 +884,7 @@ form#new_patient, form.edit_patient{
     }
   }
 
-  .col input#patient_dob {
+  .col input#patient_birth_date_on {
     height:30px;
     margin-top:5px;
     width:200px;
@@ -992,14 +893,7 @@ form#new_patient, form.edit_patient{
   }
 }
 
-form.edit_patient div.row:nth-child(odd){
-  background:#dbdae2;
-}
-form.edit_patient div.row:nth-child(even), form.edit_patient div .row {
-  background:#fff;
-}
-
-/* Test Results Styles */ 
+/* Test Results Styles */
 #contentcontainer #contentsection .filterbar {
   height:40px;
   float:none;
@@ -1010,7 +904,6 @@ form.edit_patient div.row:nth-child(even), form.edit_patient div .row {
   background:#e06023;
   position:fixed;
   width:100%;
-  z-index:1000000;
 
   .heading {
     display:flex;
@@ -1070,9 +963,6 @@ form#filters-form.filteroptions {
     .advanced {
       padding:0px 15px;
     }
-    .advanced.patientsFilter .filter {
-      flex:1;
-    }
     input {
       margin-left:0px;
     }
@@ -1124,10 +1014,11 @@ form#filters-form.filteroptions {
       padding:0px 120px 0px 0px;
     }
   }
-} 
+}
 
 #contentsection table {
   margin:0px;
+  padding:10px 20px 10px 15px;
   border:none;
 }
 
@@ -1173,14 +1064,11 @@ div.pagination {
 
 /* Tables
      ========================================================================== */
-.rc-handle-container {
-  position:initial!important;
-}
 th.tableheader {
   background:#6d6c8b;
   padding:10px 15px;
 
-  .table-title, span {
+  .table-title {
     color:#fff;
   }
 }
@@ -1192,33 +1080,20 @@ th.tableheader {
 
 tbody {background:#fff;}
 
-#contentcontainer .paginationHeader {
-  .box {
-    padding:15px 20px 15px 15px;
-    height:auto;
-    background:#fff;
-  }
-  .pagination {
+.paginationHeader .pagination {
   position:absolute;
-  top:20px;
+  top:14px;
   right:30px;
   display:flex;
   align-items:center;
   padding:0px;
-  font-size:12px;
-  height:30px;
-
-  a.btn-link {
-    position:relative;
-    bottom:1px;
-  }
 
   a[class^="btn"], .has-value > .Select-control > .Select-placeholder, input[type="text"], span {
     color:#fff;
     opacity:1;
   }
 
-  .input-x-small {
+  input-x-small {
     width:15px;
   }
 
@@ -1226,37 +1101,32 @@ tbody {background:#fff;}
     background:#fff;
     color:#434343;
     border:none;
-    padding:0px;
-    height:20px;
+    padding:2px;
   }
 
   .text-right {
     padding:0px 3px 0px 0px;
-    margin-left:2px;
   }
 
   .Select-control {
     padding:0px;
-    height:20px;
   }
 
   .Select-placeholder {
-    padding:2px 5px;
+    padding:0px 5px;
     border:none;
     color:#434343!important;
-    height:20px;
   }
 
   span.Select-arrow {
-    top:5px;
+    top:3px;
     padding:0px;
     right:5px;
   }
 
   span:nth-child(4) {
-    padding-right:10px;
+    padding-right:18px;
   }
-}
 }
 
 .Select-arrow {
@@ -1501,7 +1371,7 @@ html {
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%; }}
-  
+
 #contentcontainer header img{
 height:20px;
 width:auto !important;
@@ -1541,7 +1411,7 @@ display:none;
 font-size:12px;
 }
 
-.add-new, #contentsection .devicearea .add-new{ 
+.add-new, #contentsection .devicearea .add-new{
 background:#e06023;
 }
 
@@ -1572,7 +1442,7 @@ background:#e06023;
     text-transform: uppercase;
 }
 
-form#new_patient div.row.button-actions input.btn-primary, form#new_patient div.row.button-actions input.btn-danger, form.edit_patient div.row.button-actions input.btn-primary{
+form#new_patient div.row.button-actions input.btn-primary, form#new_patient div.row.button-actions input.btn-danger{
 background: #2196f3;
 font-size:12px;
 }
@@ -1580,5 +1450,3 @@ font-size:12px;
 .btn, .btn-primary, .btn-danger, .btn-secondary, .btn-link{
 font-size:12px;
 }
-
-th, td { border-left:1px solid #eee; }
