--- a/app/assets/javascripts/components/patient_card.js.jsx.erb
+++ b/app/assets/javascripts/components/patient_card.js.jsx.erb
@@ -9,12 +9,17 @@ var PatientCard = React.createClass({
   render: function () {
     var patient = this.props.patient;
 
-    function patientInfo(patient) 
+    function patientInfo(patient)
     {
       var string = "";
-      if (patient.dob) 
-      {
-        string += patient.dob
+      if (patient.gender) {
+        string += patient.gender;
+        if (patient.birth_date_on) {
+          string += " - "
+        }
+      }
+      if (patient.birth_date_on) {
+        string += patient.birth_date_on
         if( patient.age > 0)
           string += " (" + patient.age + " y/o)";
         else // months only
@@ -23,7 +28,7 @@ var PatientCard = React.createClass({
       return string;
     }
 
-    if (patient == null) 
+    if (patient == null)
     {
       return (
         <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
@@ -32,8 +37,8 @@ var PatientCard = React.createClass({
           end
         end) %>
       );
-    } 
-    else 
+    }
+    else
     {
       return (
         <%= to_jsx(card(image: asset_url('card-unkown.png')) do |c|
