--- a/app/views/test_results/show.haml
+++ b/app/views/test_results/show.haml
@@ -31,7 +31,7 @@
       - c.bottom do
         - if @test_result.patient
           = I18n.t('test_results.show.patient')
-          = link_to @test_result.patient.name_or_unknown, @test_result.patient
+          = link_to patient_display_name(@test_result.patient.name), @test_result.patient
           %br
         = I18n.t('test_results.show.test_performed_on')
         = link_to @test_result.device.name, device_path(@test_result.device)
