--- a/app/views/test_results/index.haml
+++ b/app/views/test_results/index.haml
@@ -15,7 +15,7 @@
           %header
             = image_tag('img/test-tube.png')
             %h3
-              = I18n.t('test_orders.index.test_order', count: @total)
+              = I18n.t('test_results.index.test_result', count: @total)
             %span.table-actions
               = link_to test_results_path(@filter.merge(format: :csv)), title: I18n.t('test_results.index.test', count: @total) do
                 %span.icon-download.icon-gray
