--- a/app/views/patients/_patient_summary.haml
+++ b/app/views/patients/_patient_summary.haml
@@ -4,7 +4,7 @@
       = I18n.t('patients.show.patient_summary')
   .col-6
     %ul
-.panel.patient-details
+.panel.patient-details.no-scroll
   .row
     .col-12
       %ul
