--- a/app/assets/stylesheets/_newlayout.scss
+++ b/app/assets/stylesheets/_newlayout.scss
@@ -585,7 +585,7 @@ color:#fff !important;
 .testflow .panel hr {border:none;}
 .testflow .panel .row {
   margin:0px auto;
-  padding:10px 15px;
+  padding:0px;
   max-width:none;
 }
 .testflow .button:hover {opacity:0.8;}
