--- a/app/views/patients/_patient_episode_summary.haml
+++ b/app/views/patients/_patient_episode_summary.haml
@@ -25,24 +25,24 @@
             %li
               %label
                 = Episode.human_attribute_name(:diagnosis)
-              = link_to diagnosis_name(episode.diagnosis), edit_patient_episode_path(patient, episode)
+              = link_to Extras::Select.find_from_struct(Episode.diagnosis_options, episode.diagnosis), edit_patient_episode_path(patient, episode)
             %li
               %label
                 = Episode.human_attribute_name(:hiv_status)
-              = episode.hiv_status
+              = Extras::Select.find_from_struct(Episode.hiv_status_options, episode.hiv_status)
             %li
               %label
                 = Episode.human_attribute_name(:initial_history)
-              = "#{history_options_name(episode.initial_history)} - #{previous_history_options_name(episode.previous_history)}"
+              = "#{Extras::Select.find_from_struct(Episode.initial_history_options, episode.initial_history)} - #{Extras::Select.find_from_struct(Episode.previous_history_options, episode.previous_history)}"
           %ul
             %li
               %label
                 = Episode.human_attribute_name(:drug_resistance)
-              = drug_resistance_name(episode.drug_resistance)
+              = Extras::Select.find_from_struct(Episode.drug_resistance_options, episode.drug_resistance)
             %li
               %label
                 = Episode.human_attribute_name(:outcome)
-              = treatment_outcome_name(episode.outcome)
+              = Extras::Select.find_from_struct(Episode.treatment_outcome_options, episode.outcome)
           %ul
             %li
               = link_to I18n.t('patients.show.edit_episode'), edit_patient_episode_path(patient, episode), class: 'button edit'
